--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Home automation",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "ifttt"
@@ -15,6 +16,11 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "googleapis": "^26.0.1",
-    "morgan": "^1.9.0"
+    "jquery": "^3.3.1",
+    "morgan": "^1.9.0",
+    "xmlhttprequest": "^1.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.5"
   }
 }
